--- a/testroboid/pom.xml
+++ b/testroboid/pom.xml
@@ -3,4 +3,38 @@
   <groupId>testrobo</groupId>
   <artifactId>testroboid</artifactId>
   <version>0.0.1-SNAPSHOT</version>
+  <dependencies>
+	    <!-- https://mvnrepository.com/artifact/org.robotframework/javalib-core -->
+	<dependency>
+	    <groupId>org.robotframework</groupId>
+	    <artifactId>robotframework</artifactId>
+	    <version>2.8.4</version>
+	</dependency>
+	<dependency>
+	    <groupId>com.github.markusbernhardt</groupId>
+	    <artifactId>robotframework-selenium2library-java</artifactId>
+	    <version>1.4.0.8</version>
+	    <scope>test</scope>
+	</dependency>
+    
+</dependencies>
+<build>
+	<plugins>
+		<plugin>
+		<groupId>org.robotframework</groupId>
+	    <artifactId>robotframework-maven-plugin</artifactId>
+	    <version>1.4.6</version>
+	    <executions>
+	    	<execution>
+	    		<goals>
+	    			<goal>
+	    				run
+	    			</goal>
+	    		</goals>
+	    	</execution>
+	    </executions>
+		</plugin>
+	</plugins>
+</build>
+
 </project>
